# mailpreview-cli

./: Cargo.toml  LICENSE  Makefile
.github/workflows/: build.yml
src/: main.rs
